# USTC-learning-materials

./: README.md  readme.md
2FA College Physics – Comprehensive Experimentation B/摄谱/: 摄谱.tex
2FA College Physics – Comprehensive Experimentation B/摄谱实验报告/: 摄谱.aux
2FA College Physics – Comprehensive Experimentation B/直流非平衡电桥/: 直流非平衡电桥.aux
2FA College Physics – Comprehensive Experimentation B/直流非平衡电桥实验报告/: 直流非平衡电桥.tex
2FA Data Structure and Algorithm/实验源代码/2023FA Data_structure_and_Algorithm/homework_chap3/: CMakeLists.txt
2FA Data Structure and Algorithm/实验源代码/2023FA Data_structure_and_Algorithm/homework_chap3/source/: linklist.cpp  linklist.h  linkqueue.cpp  linkqueue.h  main.cpp  sqstack.cpp  sqstack.h
2FA Data Structure and Algorithm/往年题及部分答案/: 2022年秋数据结构及其算法试卷（回忆版）.txt  《数据结构及其算法》往年题答案.txt
2FA Electromagnetism C/summary/: summary.docx
2FA(minor) Data Structures/: C++入门说明文档.md
2SP Electronic Technology Experiment II/数电lab1/: main.aux  main.tex
2SP Electronic Technology Experiment II/数电lab2/: main.aux  main.tex
2SP Electronic Technology Experiment II/数电lab3/: main.aux  main.tex
2SP Electronic Technology Experiment II/数电lab4/: main.aux  main.tex
2SP Electronic Technology Experiment II/数电lab5/: main.aux  main.tex
2SP Principles of Computers and Embedded Systems/: 《微嵌》复习提要.xls  大抄inA4.docx  计算机原理与嵌入式系统综合实验.md
2SP Signals and Systems A/期中/: 信号与系统期中考试答案.md
2SP(minor) Computer Organization and Design/作业/: PB22051031_李毅_作业1.md  (+16 more)
3FA Computer Network/: 复习ppt 李健.pptx  复习ppt 洪佩琳.pptx  计算机网络复习 填空版.docx
3FA Modern Communications Principles/: 划重点.md
(+1874 files in other folders)
